--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
